--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 //Get the parent div element
 	const parentDiv = document.querySelector('.littlePics');
 //Select all the image elements inside the parent div
-	const images=parentDiv.querySelectorAll('#littlePic');
+	const images=parentDiv.querySelectorAll('.littlePic');
 //loop through the images and assign tabindex
 	images.forEach((image)=>{
   	image.setAttribute('tabindex','0');
@@ -25,22 +25,22 @@
 	</div>
 	
 <div class="littlePics">
-	<img id = "littlePic" alt = "Clevaland Browns Stadium" src="Images/IMG_7035.jpg"
+	<img class = "littlePic" alt = "Clevaland Browns Stadium" src="Images/IMG_7035.jpg"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo(this)">
 	
-	<img id = "littlePic" alt = "Highmark Stadium Buffalo" src="Images/Buffalo.jpg" 
+	<img class = "littlePic" alt = "Highmark Stadium Buffalo" src="Images/Buffalo.jpg" 
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo(this)">
 	
-	<img id = "littlePic" src="Images/Cincinatti.jpg" alt = "Paycor Stadium Cincinatti"
+	<img class = "littlePic" src="Images/Cincinatti.jpg" alt = "Paycor Stadium Cincinatti"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo(this)">
 	
-	<img id = "littlePic" alt = "Oakland Coliseum Oakland" src="Images/Oakland.JPG"
+	<img class = "littlePic" alt = "Oakland Coliseum Oakland" src="Images/Oakland.JPG"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo()">
 	
-	<img id = "littlePic" alt = "Heinz Field Pitsburg" src="Images/Pitsburg.jpg"
+	<img class = "littlePic" alt = "Heinz Field Pitsburg" src="Images/Pitsburg.jpg"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo()">
 	
-	<img id = "littlePic" src="Images/Washington.jpg" alt = "Lumen Field Washington"
+	<img class = "littlePic" src="Images/Washington.jpg" alt = "Lumen Field Washington"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo()">
 </div>
 	
