--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Gallery Homework</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 <script>
 	document.addEventListener('DOMContentLoaded',function(){
 //Get the parent div element
@@ -45,5 +45,5 @@
 </div>
 	
 </body>
-<script  src="./script.js"></script>
+<script src="script.js"></script>
 </html>
