take out Images from div src

--- a/Index.html
+++ b/Index.html
@@ -25,22 +25,22 @@
 	</div>
 	
 <div class="littlePics">
-	<img class = "littlePic" alt = "Clevaland Browns Stadium" src="Images/IMG_7035.jpg"
+	<img class = "littlePic" alt = "Clevaland Browns Stadium" src="IMG_7035.jpg"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo(this)">
 	
-	<img class = "littlePic" alt = "Highmark Stadium Buffalo" src="Images/Buffalo.jpg" 
+	<img class = "littlePic" alt = "Highmark Stadium Buffalo" src="Buffalo.jpg" 
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo(this)">
 	
-	<img class = "littlePic" src="Images/Cincinatti.jpg" alt = "Paycor Stadium Cincinatti"
+	<img class = "littlePic" src="Cincinatti.jpg" alt = "Paycor Stadium Cincinatti"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo(this)">
 	
-	<img class = "littlePic" alt = "Oakland Coliseum Oakland" src="Images/Oakland.JPG"
+	<img class = "littlePic" alt = "Oakland Coliseum Oakland" src="Oakland.JPG"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo()">
 	
-	<img class = "littlePic" alt = "Heinz Field Pitsburg" src="Images/Pitsburg.jpg"
+	<img class = "littlePic" alt = "Heinz Field Pitsburg" src="Pitsburg.jpg"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo()">
 	
-	<img class = "littlePic" src="Images/Washington.jpg" alt = "Lumen Field Washington"
+	<img class = "littlePic" src="Washington.jpg" alt = "Lumen Field Washington"
 	onfocus = "upDate(this)" onblur = "unDo(this)" onmouseover = "upDate(this)" onmouseout = "unDo()">
 </div>
 	
