--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Gallery Homework</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 <script>
 	document.addEventListener('DOMContentLoaded',function(){
 //Get the parent div element
